wrap fixed

--- a/react-app/src/components/ListingDetails/ListingDetails.css
+++ b/react-app/src/components/ListingDetails/ListingDetails.css
@@ -78,15 +78,11 @@
   display: flex;
   align-items: baseline;
   width: 100%;
-  /* gap: 90px; */
 }
 
 .listing-info {
   width: 55%;
   margin-right: 45px;
-  /* padding-right: 30px;
-  border-right: 1px solid lightgray; */
-  /* background-color: blue; */
 }
 
 .review-div {
